@@ -291,6 +291,10 @@ public final class Query {
         return hasOption(QueryFlag.VERBOSE);
     }
 
+    public boolean isValidSyntax() {
+        return hasOption(QueryFlag.VALID_SYNTAX);
+    }
+
     public SystemInfoOption getSystemInfoOption() {
         if (hasOption(QueryFlag.LIST_SOURCES_OR_VERSION)) {
             final String optionValue = getOptionValue(QueryFlag.LIST_SOURCES_OR_VERSION).trim();
